# hasansezertasan

./: .editorconfig  .github-language-analysis.js  .github-language-analysis.py  .github-language-analysis.sh  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .proselintrc.json  README.md  _typos.toml  gh-extensions.txt  main.py  maskfile.md  mise.toml  mkdocs.yml  pip-requirements.txt  pipx-requirements.txt  prek.toml  pyproject.toml  requirements.txt
.bookmarks/local/: bookmarks.json  bookmarks.registry.json  bookmarks.registry.json.bak
.config/: mise.toml
.github/: .github-language-analysis.js  .github-language-analysis.sh  dependabot.yml
.github/workflows/: ci.yml  prek.yml  readme-stats.yml
brew/: brew.txt
docs/: .authors.yml  index.md
docs/posts/: hello-world.md  is-uv-bad-for-our-health.md  my-thoughts-about-fastui.md  the-story-behind-keycast.md  what-is-a-build-system.md  what-is-a-distribution.md  what-is-a-library.md  what-is-a-module.md  what-is-a-package.md  what-is-a-script.md  what-is-an-application.md  what-is-bundling.md  what-is-everything-as-code.md  what-is-fastui.md  what-is-marimo.md  what-is-mise.md  what-is-pypi.md  what-is-uv.md  what-is-xc.md
scoop/: scoop-old.json  scoop.json
scripts/: README.md  exporter.ps1  installer.ps1  installer.sh
src/hasansezertasan/: __init__.py  main.py
winget/: winget.json
